syntax = "proto3";

option csharp_namespace = "Analytics.Api.Grpc";

package auctions;

service AuctionGrpc {
  rpc GetAuctionStats (GetAuctionStatsRequest) returns (AuctionStatsResponse);
  rpc GetAuctionAnalytics (GetAuctionAnalyticsRequest) returns (AuctionAnalyticsResponse);
  rpc GetTopAuctions (GetTopAuctionsRequest) returns (TopAuctionsResponse);
  rpc GetCategoryStats (GetCategoryStatsRequest) returns (CategoryStatsResponse);
}

message GetAuctionStatsRequest {
}

message AuctionStatsResponse {
  int32 live_auctions = 1;
  int32 total_auctions = 2;
  int32 completed_auctions = 3;
  double total_revenue = 4;
}

message GetAuctionAnalyticsRequest {
  string start_date = 1;
  string end_date = 2;
}

message AuctionAnalyticsResponse {
  int32 live_auctions = 1;
  int32 completed_auctions = 2;
  int32 cancelled_auctions = 3;
  int32 pending_auctions = 4;
  double total_revenue = 5;
  double average_final_price = 6;
  double success_rate = 7;
  int32 auctions_ending_today = 8;
  int32 auctions_ending_this_week = 9;
  repeated DailyAuctionStat daily_stats = 10;
}

message DailyAuctionStat {
  string date = 1;
  int32 created = 2;
  int32 completed = 3;
  double revenue = 4;
}

message GetTopAuctionsRequest {
  int32 limit = 1;
  string sort_by = 2;
}

message TopAuctionsResponse {
  repeated TopAuction auctions = 1;
}

message TopAuction {
  string auction_id = 1;
  string title = 2;
  string seller_username = 3;
  double final_price = 4;
  int32 bid_count = 5;
}

message GetCategoryStatsRequest {
  string start_date = 1;
  string end_date = 2;
}

message CategoryStatsResponse {
  repeated CategoryStat categories = 1;
}

message CategoryStat {
  string category_id = 1;
  string category_name = 2;
  int32 auction_count = 3;
  double revenue = 4;
  double percentage = 5;
}
